--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     kapt "com.github.bumptech.glide:compiler:4.11.0"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.github.Fuadafdhal:Auto-Image-Slider:1.0'
+    implementation 'androidx.room:room-runtime:2.4.1'
+    kapt 'androidx.room:room-compiler:2.4.1'
 
     implementation "com.google.code.gson:gson:2.8.7"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
